# matiec-cmake

./: .gitignore  AGENTS.md  CMakeLists.txt  main.cc  main.hh  matiec.nuspec
.github/workflows/: build.yml
absyntax/: CMakeLists.txt  absyntax.cc  absyntax.hh  ast_memory.cc  gen_absyntax.py  visitor.cc
absyntax_utils/: CMakeLists.txt  absyntax_utils.cc  debug_ast.cc  function_call_param_iterator.cc  function_param_iterator.cc  get_datatype_info.cc
docs/: MODERNC_DESIGN.md  README.md  STRING-HANDLING.md  mcp-tools.md  perf-checklist.md  testing-policy.md
include/matiec/: error.hpp
issues/: TODO.md  p-modern-cpp-style-overview.csv  p2-ast-ownership-pilot-pass1.csv  p2-memory-safety-guardrails-pass1.csv  p2-memory-safety-guardrails-pass2.csv  p2-raii-sweep-pass2.csv  p2-stage4-raii-pass1.csv  p3-string-upgrade-pass1.csv  p3-string-upgrade-pass2.csv  p3-string-upgrade-pass3.csv
openspec/changes/archive/2026-01-25-refactor-repo-structure/specs/repo-structure/: spec.md
src/: error_reporter.cc  matiec_lib.cc  runtime_options.cc
stage1_2/: CMakeLists.txt  iec_bison.yy  iec_flex.ll  stage1_2.cc  stage1_2_priv.hh
stage3/: CMakeLists.txt  array_range_check.cc  case_elements_check.cc  constant_folding.cc  declaration_check.cc  enum_declaration_check.cc  fill_candidate_datatypes.cc  lvalue_check.cc  modern_semantic_annotations.cc  narrow_candidate_datatypes.cc  print_datatypes_error.cc  remove_forward_dependencies.cc  stage3.cc
stage4/: CMakeLists.txt  stage4.cc
stage4/generate_c/: generate_c.cc  generate_c_base.cc  generate_c_st.cc  generate_c_typedecl.cc  generate_c_vardecl.cc
tests/: CMakeLists.txt
tests/common/: test_utils.cc  test_utils.hh
tests/e2e/: test_codegen_regression.cc  test_e2e_compile.cc  test_syntax_validation.cc
tests/fixtures/: simple_program.st
tests/fixtures/codegen/: POUS.c  POUS.h  simple_program.iec
tests/unit/: test_codegen_emitter.cc  test_constant_folding.cc  test_error_handling.cc  test_matiec_api.cc  test_semantic_candidates.cc  test_string_utils.cc  test_type_inferrer.cc  test_type_registry.cc
util/: symtable.hh
